--- a/projects.html
+++ b/projects.html
@@ -376,7 +376,7 @@ p    {color: black;}
 <h1>Projects</h1>
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
-<p>	
+	<p>	
 	<p>
 <h2>Project 5 – National Parks</h2><br>	
 	• We will develop a poster about a National Park based on the Unigrid created by Massimo Vignelli.<br>
@@ -389,21 +389,36 @@ p    {color: black;}
 
 	
 	<div class="lineup"></div>
+	
 <p>
 <h2>Project 4 – Mid Term</h2><br>	
-	• The mid-term will take place on Wednesday, October 21st, and will be due before the end of class.<br>
+	• The mid-term will take place on Wednesday, October 20th, and will be due before the end of class.<br>
 	• We will be designing your GitHub home page by adding CSS styling. <br>
+	
+<br>
+Keep in mind the following considerations:<br>
+1. Use at least one roll-over transition (text changing color or opacity on roll-over or getting larger).<br>
+2. To review/learn about transitions, reference this resource: <a href="https://www.w3schools.com/css/css3_transitions.asp">https://www.w3schools.com/css/css3_transitions.asp</a><br>
+3. Organize your projects by showing the latest ones first. So the portrait jpgs will be first, followed by the responsive poster, followed by the two versions of the calculator.<br>
+	4. We will have at least 2 other links as the semester goes on. Make sure it is possible for you to add links to your page in the near future.<br>
+5. Make sure your project links are visible above the fold, so without any need for scrolling on the page.<br>
+6. Below your projects, create an About Me section. This is open to your interpretation and can contain text and/or shapes.<br>
+7. Do not use any jpgs on the home page. You can use text, shapes, and colors.<br>
+8. Infuse your personal style to your home page, but keep it legible and accessible.<br>
+9. Upload your design to GitHub before 6.30pm. It should be the "index.html" file on your GitHub account.<br>
+10. You are free to leave the class when you complete and upload your page.<br>
+11. When in doubt, keep things simple and straightforward. Pay attention to legibility, typography, and accessibility.<br>
+<br><br>
+	
 <br>
 
 <br>
 </p>	
 	
-	
-	
-	
-	
-<div class="lineup"></div>
-<p>
+			<div class="lineup"></div>
+
+
+	<p>
 <h2>Project 3 – The HTML Portrait</h2><br>
 	
 	<div class="mainHolder">
@@ -452,22 +467,22 @@ p    {color: black;}
 
 <br>
 </p>			
-		
+	
+	
+	<div class="lineup"></div>
 	
 	
 	
-<div class="lineup"></div>
-
-	<p>
-<h2>Project 2 – Information Architecture</h2><br>
+	
+	<h2>Project 2 – Information Architecture</h2><br>
 • We will discuss Dieter Rams and his 10 principles of design. <br>
 • We will look at how these principles apply to your work and write an essay responding to each of his points.<br>
 • We will create a responsive web-based poster based on your essay.<br>
 • This poster will have at least one break-point for smaller screens.<br>
-• Lastly, we will create a copy of the design and adjust the CSS styling based on the work of any chosen designer or studio. <br>
-
 <br>
-</p>	
+<br><br>
+	
+	
 	
 			<div class="lineup"></div>
 
@@ -481,89 +496,51 @@ We will code a simple calculator using HTML and Javascript in class. We will the
 • The calculator will be styled in two ways: one freeform, and one focusing on the work of a designer.<br>
 <br>
 <br><br>
-</p>
-	
-
-
-	
-	
 
 
 </div>
 
 <div class="rightcolumn">
-<p>DES 350 / Fall, 2020<br>
+<p>DES 350 / Fall, 2021<br>
 Mondays + Wednesdays<br>
-Instructor: <a href="http://studiobema.com/" target="_blank">Michal Janicki</a></p>
+Instructor: <a href="http://studiobema.com/" target="_blank">Michal Janicki</a> </p>
 
 <div class="lineup"></div>
 <p> <strong>Participants</strong><br>
-	<a href="https://japoli2.github.io/Apolinar/" target="_blank">Joanna Apolinar Cirilo </a> <br>
+	
+	<a href="https://geo-ags.github.io/DES350/" target="_blank">Geo A.</a> <br>
+	<a href="https://tarmit3.github.io/DES350/" target="_blank">Trina A.</a> <br>
 
-<a href="https://mcrame4.github.io/DES350/" target="_blank">Mary Jane Cramer</a> <br>
+<a href="https://butto99.github.io/DES350/" target="_blank">Omar B.</a> <br>
+	<a href="https://mbibay2.github.io/des350/" target="_blank">Michaella B.</a> <br>
+	<a href="https://acando2.github.io/DES350/" target="_blank">Ariane C.</a> <br>
+		<a href="https://jackieg13.github.io/DES-350/" target="_blank">Jacqueline G.</a> <br>
 
+		<a href="https://edgarjprism.github.io/DES350/Index.html" target="_blank">Edgar J.</a> <br>
+			<a href="https://jkatre3.github.io/DES350/" target="_blank">Jessica K.</a> <br>
+<a href="https://viannko.github.io/DES350/" target="_blank">Viann K.</a> <br>
 
-<a href="https://vdiaz24.github.io/DES350/" target="_blank">Viviana Diaz</a> <br>
-
-
-
-<a href="https://nermer2.github.io/DES350/" target="_blank">Nadia Ermer</a> <br>
-
-
-
-<a href="https://arigonzalez.github.io/DES350/" target="_blank">Ari Gonzalez</a> <br>
-
-
-<a href="https://kgotiwale.github.io/DES-350/" target="_blank">Kshitij Gotiwale</a> <br>
-
+	
+				<a href="https://britym.github.io/des350/" target="_blank">Briana M.</a> <br>
+				<a href="https://jan3t.github.io/DES350/" target="_blank">Janet N.</a> <br>
 
 
-<a href="https://fgozon2.github.io/DES350/" target="_blank">Faye Gozon</a> <br>
+			<a href="https://riocasso.github.io/DES350/" target="_blank">Romario O.</a> <br>
+
+	<a href="https://cpalacios48.github.io/DES350/" target="_blank">Christian P.</a> <br>	
+	<a href="https://cpeaco4.github.io/DES-350/ " target="_blank">Creighton P.</a> <br>	
+<a href="https://epined7.github.io/350/" target="_blank">Edgar P.</a> <br>	
+	<a href="https://eroman30.github.io/DES350/index.html" target="_blank">Elian R.</a> <br>	
+	<a href="https://djrobles.github.io/DES350/index.html" target="_blank">David R.</a> <br>	
+		<a href="https://frodri35.github.io/DES350/Index.html" target="_blank">Frida R.</a> <br>	
 
 
-<a href="https://hhensl2.github.io/DES350/" target="_blank">Haley Hensley</a> <br>
+	<a href="https://enriquejr22.github.io/DES350/index.html" target="_blank">Enrique S.</a> <br>	
 
-
-
-<a href="https://thinds3.github.io/DES-350/" target="_blank">Tommy Hinds</a> <br>
-
-
-
-<a href="https://alhsieh2.github.io/DES350/" target="_blank">Ann Hsieh</a> <br>
-
-
-
-
-<a href="https://lphuynh9.github.io/DES350/" target="_blank">Linh Huynh</a> <br>
-
-
-<a href="https://ejaram4.github.io/DES350/" target="_blank">Erika Jaramillo</a> <br>
-
-
-
-<a href="https://maddielock17.github.io/DES350/" target="_blank">Maddie Lockwood</a> <br>
-
-
-
-<a href="https://slopez581.github.io/DES350/" target="_blank">Sebastian Lopez</a> <br>
-
-
-
-<a href="https://dortig2.github.io/DES350/" target="_blank">Daniel Ortigoza</a> <br>
-
-
-
-
-<a href="https://tpaws.github.io/DES350/" target="_blank">Victoria Pawlyk</a> <br>
-
-
-
-
-<a href="https://asoto29.github.io/DES350/" target="_blank">Antonio Soto</a> <br>
-
-
-
-<a href="https://elliespearman2022.github.io/DES350/index" target="_blank">Ellie Spearman</a> <br>	
+	<a href="https://carolines-sketchbook.github.io/DES350/" target="_blank">Caroline S.</a> <br>	
+	<a href="https://nsamtani.github.io/DES350/" target="_blank">Neha S.</a> <br>	
+<a href="https://maywalan.github.io/DES350/" target="_blank">Matach W.</a> <br>
+	
   <br>
 </p>
 </div>
