--- a/calendar.html
+++ b/calendar.html
@@ -136,7 +136,7 @@ p    {color: black;}
 	• Denali<br>
 	• Everglades<br>
 	• Great Smoky Mountains<br>
-	• Hawaii VOlcanoes<br>
+	• Hawaii Volcanoes<br>
 	• Olympic, Washington<br>
 	• Sequoia<br>
 	• Yosemite<br>
