--- a/calendar.html
+++ b/calendar.html
@@ -116,7 +116,25 @@ p    {color: black;}
 	
 <div class="leftcolumn">
 	
+		<div class="lineup"></div>
 	
+	
+		<p>
+<h3>Nov. 03</h3> <br>
+<strong>Class 20, Wednesday</strong><br>
+• Review of remaining HTML Portraits.<br>
+• Portraits will be graded this weekend.<br> 
+• Sign-up for remaining parks.<br> 
+• Lab: Individual reviews of poster hand-sketch and transition to Illustrator.<br>
+	
+
+	<br>
+	<strong>For Monday:</strong><br>
+• Please have an initial version of your poster.<br>
+<br>
+</p>
+	
+
 			<p>
 <h3>Nov. 01</h3> <br>
 <strong>Class 19, Monday</strong><br>
