--- a/calendar.html
+++ b/calendar.html
@@ -122,6 +122,7 @@ p    {color: black;}
 		<p>
 <h3>Nov. 03</h3> <br>
 <strong>Class 20, Wednesday</strong><br>
+<strong>• ANNOUNCEMENT: We will not meet on November 10.</strong><br>
 • Review of remaining HTML Portraits.<br>
 • Portraits will be graded this weekend.<br> 
 • Sign-up for remaining parks.<br> 
