--- a/calendar.html
+++ b/calendar.html
@@ -115,7 +115,43 @@ p    {color: black;}
 	
 	
 <div class="leftcolumn">
+			<p>
+<h3>Nov. 08</h3> <br>
+<strong>Class 21, Monday</strong><br>
+<strong>• ANNOUNCEMENT: We will not meet this coming Wednesday, November 10.</strong><br>
+• Discussion of simple animation techniques in After Effects.<br> 
+	• Small-group breakouts for initial poster critiques.<br>
+
+	<br>
+		<br>
+• A few examples of animated posters:<br>
+	<a href="https://www.expedia.co.uk/vc/c/festival-travel-posters/" target="_blank">Expedia posters</a> <br>
+	<a href="https://www.behance.net/gallery/57130687/Animated-Travel-Posters" target="_blank">Travel Poster Series on Behance</a> <br>
+	<a href="https://www.fusedmagazine.co.uk/nostalgic-travel-posters/" target="_blank">Fused Magazine Posters</a>	<br>
+	<br>
+• Presentation and Technical Follow-along: AfterEffects, Illustrator, and the Pin Tool.<br>
+	<br>
+• Reference these tutorials for more info or a refresher as you work:<br>
 	
+	<a href="https://vimeo.com/blog/post/designing-illustrator-for-after-effects-animation/" target="_blank">Illustrator to After Effects best practices</a><br>
+	
+	<a href="https://youtu.be/XhD93-ZA7vc" target="_blank">Puppet Pin Tool Tutorial</a><br>
+	
+	<a href="https://vimeo.com/blog/post/basic-masking-in-after-effects/" target="_blank">Basic masking in After Effects</a><br>
+	
+	
+<a href="https://motionarray.com/tutorials/after-effects-tutorials/how-to/how-to-animate-liquid-in-after-effects" target="_blank">Animated Liquid Tutorial</a> <br>
+<a href="https://motionarray.com/tutorials/after-effects-tutorials/how-to/how-to-create-animated-fire-in-after-effects" target="_blank">Animated Fire Tutorial</a><br><br>
+	
+
+	<br>
+	<strong>Wednesday:</strong><br>
+• We will not be meeting in class!.<br>
+• This will be considered a lab for finishing your poster design and animation.<br>
+• There will also be a film assignment: Lo and Behold, Reveries of the Connected World by Werner Herzog. The film is available on Amazon Prime and for free (with ads) via this <a href="https://youtu.be/q3g3hqNJqpQ" target="_blank">YouTube Link</a>. <br>
+<br>
+</p>
+			<div class="lineup"></div>
 	
 	
 		<p>
