--- a/calendar.html
+++ b/calendar.html
@@ -115,6 +115,26 @@ p    {color: black;}
 	
 	
 <div class="leftcolumn">
+	
+	
+		<p>
+<h3>Nov. 10</h3> <br>
+<strong>Class 21, Wednesday</strong><br>
+<strong>• ANNOUNCEMENT: We will not meet in class today.</strong><br>
+• Please watch the following film and be ready to discuss on Monday: Lo and Behold, Reveries of the Connected World by Werner Herzog. The film is available on Amazon Prime and for free (with ads) via this <a href="https://youtu.be/q3g3hqNJqpQ" target="_blank">YouTube Link</a>. <br>
+	
+
+	<br>
+	<strong>For Monday:</strong><br>
+• Please have a finished version of your poster.<br>
+• We will discuss progress on your animation. <br>
+<br>
+</p>
+	
+	
+	
+				<div class="lineup"></div>
+
 			<p>
 <h3>Nov. 08</h3> <br>
 <strong>Class 21, Monday</strong><br>
