--- a/calendar.html
+++ b/calendar.html
@@ -116,6 +116,40 @@ p    {color: black;}
 	
 <div class="leftcolumn">
 	
+	
+								<h3>Nov. 17</h3> <br>
+<strong>Class 25, Wednesday</strong><br><br>
+<br>
+• Lecture: Intro to UX and Wireframing.<br>
+• Lab for animations and smaller group reviews:<br>
+• Review of animated posters from the class: in the small group crit, answer these three questions:<br>
+1. What you like and what caused issues. <br>
+2. Address your approach to typography and animation. <br>
+3. How is the poster representative of your style?<br><br>
+
+<br><br>
+<strong>For Monday:</strong><br>
+• Create a wireframe of your website (either hand-drawn or in Illustrator) incorporating the following elements:<br>
+1. The word “visit”, the park name and illustrative elements (this should extend to or below the fold)<br>
+2. Description of your park. Use the park website or Wikipedia to write a paragraph that describes the park in general (this should be around 400 words). <br>
+3. Date the area became a national park.<br>
+4. Five activities from your poster. Consider illustrating these or adding to the description. Do not use photographs on the site. <br>
+5. Longitude and longitude of the park location. <br>
+6. Total square mileage of the park.<br>
+7. A section to advertise 3 additional parks the user can visit. <br>
+8. Link to the nps.gov website.<br>
+9. Citation of sources you used to gather information about the park. <br>
+	
+	
+<br><br>
+	
+	
+	
+	<div class="lineup"></div>		
+
+	
+	
+	
 							<h3>Nov. 15</h3> <br>
 <strong>Class 24, Monday</strong><br><br>
 <br>
