--- a/calendar.html
+++ b/calendar.html
@@ -116,7 +116,25 @@ p    {color: black;}
 	
 <div class="leftcolumn">
 	
+									<h3>Nov. 22</h3> <br>
+<strong>Class 26, Monday</strong><br><br>
+<br>
+• Last week of classes before finals!<br>
+• Lab: upload poster roll-over to Github if you have not done so.<br>
+• Lab: move into design of your site based on your poster.<br>
+• Optional: use parallax scroll.<br>
+<br><br>
+
+<br><br>
+<strong>For Wednesday:</strong><br>
+• Make sure the posters are on your GitHub and ready to go. <br>
+• You should have the design of your page ready to implement for Wednesday.<br>	
+• Class on Wednesday will be a lab and I will be available to review work, answer questions.<br>
+<br><br>
 	
+	
+	
+		<div class="lineup"></div>	
 								<h3>Nov. 17</h3> <br>
 <strong>Class 25, Wednesday</strong><br><br>
 <br>
