--- a/resources.html
+++ b/resources.html
@@ -114,8 +114,11 @@ p    {color: black;}
 <div class="lineupmain"></div>
 <div class="leftcolumn">
 
-	
-	
+		<p>
+	<h2><a href="https://dixonandmoe.com/rellax/" target="_blank">Parallax Scroll.</a><br></h2>
+</p>	
+			<div class="lineup"></div>
+
 <p>
 	<h2><a href="http://github.com" target="_blank">http://github.com</a><br></h2>
 </p>
