--- a/calendar.html
+++ b/calendar.html
@@ -116,6 +116,28 @@ p    {color: black;}
 	
 <div class="leftcolumn">
 	
+	
+	
+	<h3>Nov. 24</h3> <br>
+	<strong>Class 27, Wednesday</strong><br><br>
+<br>
+• Our last class!<br>
+• Review of class safety, masking, etc.<br>
+• Attendance is optional! I will be in class for those that are joining.<br>
+• I will be emailing a zoom link to the class if you want to check in virtually.<br>
+• Lab will end at 6pm.<br>
+
+
+
+<br><br>
+<strong>For Monday:</strong><br>
+• Final presentations will take place on Monday and Wednesday of next week.<br>
+• Please attend both classes, even if we review your work on the first day. Provide feedback and support to your classmates. <br>
+		
+<br><br>
+	
+	<div class="lineup"></div>	
+	
 									<h3>Nov. 22</h3> <br>
 <strong>Class 26, Monday</strong><br><br>
 <br>
