--- a/calendar.html
+++ b/calendar.html
@@ -117,6 +117,31 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+		<h3>Nov. 29 + Dec. 1</h3> <br>
+	<strong>Class 28 and 29, Monday and Wednesday</strong><br><br>
+<br>
+• We will meet in-person for both classes.<br>
+• Each day, we will have a guest critic. <br>
+• Please attend both classes and be ready to share two of your favorite projects.<br>
+• The website for the park will be due this weekend – it's ok to show progress!<br>
+• We will review the work of up to 10 people each day, volunteers are appreciated.<br>
+• We will have time for questions about the work of each guest critic. Remember, these are folks who you might interview with for an internship, or a job, so feel free to ask for advice. Some examples: what do you look for in a portfolio? What kind of projects should I talk about in my interviews? Does your work focus more on digital or print? How important is typography to the sort of work you do?<br>
+
+
+
+<br><br>
+<strong>For Wednesday:</strong><br>
+• We will go over how to grab poster images from other people's sites at the beginning of class. <br>
+• You can view source and grab the code to a poster by visiting your colleagues websites. <br>
+<br>
+• Please fill out the teacher evaluation forms. They are anonymous and they help us shape the class. I've used feedback to change the class each year, so let UIC know what worked, what you enjoyed, and what was a miss. <br>
+• Please attend both classes, even if we review your work on the first day. Provide feedback and support to your classmates, it's ok to speak up even if to say great job. Applause at the end of each presentation feels grand. <br>
+		
+<br><br>
+	
+	
+	
+	<div class="lineup"></div>	
 	
 	<h3>Nov. 24</h3> <br>
 	<strong>Class 27, Wednesday</strong><br><br>
@@ -131,6 +156,7 @@ p    {color: black;}
 
 <br><br>
 <strong>For Monday:</strong><br>
+• Please be ready to present two of you favorite projects
 • Final presentations will take place on Monday and Wednesday of next week.<br>
 • Please attend both classes, even if we review your work on the first day. Provide feedback and support to your classmates. <br>
 		
